force-app/main/default/objects/VoiceLead__c/VoiceLead__c.object-meta.xml
<CustomObject>
    <label>VoiceLead</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VoiceLeads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>