force-app/main/default/objects/VoiceLead__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <inlineHelpText>Please ask for the number of people at the caller&apos;s company.</inlineHelpText>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2-9</fullName>
            </value>
            <value>
                <fullName>10-20</fullName>
            </value>
            <value>
                <fullName>21-100</fullName>
            </value>
            <value>
                <fullName>101+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>