force-app/main/default/objects/VoiceLead__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <inlineHelpText>Please enter the Country for the caller&apos;s contact address if not the United States.</inlineHelpText>
    <label>Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>