force-app/main/default/objects/VoiceLead__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>Possible wrapup scenarios for voice.</description>
    <inlineHelpText>Please choose outcome of the contact.</inlineHelpText>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>SALE</fullName>
            </value>
            <value>
                <fullName>Left message/sent email - awaiting reply</fullName>
            </value>
            <value>
                <fullName>Qualified - considering solution</fullName>
            </value>
            <value>
                <fullName>Referred to other j2 Product</fullName>
            </value>
            <value>
                <fullName>No Response to Calls/Emails</fullName>
            </value>
            <value>
                <fullName>No Sale - disliked product / pricing</fullName>
            </value>
            <value>
                <fullName>No Sale - Keeping current solution</fullName>
            </value>
            <value>
                <fullName>No Sale - Evaluating Competitor</fullName>
            </value>
            <value>
                <fullName>Not the right decision maker</fullName>
            </value>
            <value>
                <fullName>Invalid Lead / Spam</fullName>
            </value>
            <value>
                <fullName>Customer support issue, no sales opp.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>