force-app/main/default/objects/VoiceLead__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Lead&apos;s contact phone</description>
    <inlineHelpText>Ask for Caller&apos;s contact phone number and enter it here.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>