force-app/main/default/objects/VoiceLead__c/fields/Product_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Product_Ordered__c</fullName>
    <description>Product ordered for a SALE.  
Product Interested in for a LEAD.</description>
    <inlineHelpText>Pick either:
Product ordered for a SALE.  
Product Interested in for a LEAD.</inlineHelpText>
    <label>Product Ordered/Interested In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OBR-4 ext</fullName>
            </value>
            <value>
                <fullName>OBR-10 ext</fullName>
            </value>
            <value>
                <fullName>OBR-otherExts</fullName>
            </value>
            <value>
                <fullName>OBE</fullName>
            </value>
            <value>
                <fullName>OBUM</fullName>
            </value>
            <value>
                <fullName>eVR-3ext</fullName>
            </value>
            <value>
                <fullName>eVR-otherExts</fullName>
            </value>
            <value>
                <fullName>PP-MM</fullName>
            </value>
            <value>
                <fullName>PP-FMFM</fullName>
            </value>
            <value>
                <fullName>PP-VO</fullName>
            </value>
            <value>
                <fullName>eFax-Plus</fullName>
            </value>
            <value>
                <fullName>eFax-Pro</fullName>
            </value>
            <value>
                <fullName>eFax-Corp</fullName>
            </value>
            <value>
                <fullName>fax.com</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>