force-app/main/default/objects/VoiceLead__c/fields/Q1__c.field-meta.xml
<CustomField>
    <fullName>Q1__c</fullName>
    <label>Q1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>