force-app/main/default/objects/VoiceLead__c/fields/Q2__c.field-meta.xml
<CustomField>
    <fullName>Q2__c</fullName>
    <label>Q2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>