force-app/main/default/objects/VoiceLead__c/fields/Q3__c.field-meta.xml
<CustomField>
    <fullName>Q3__c</fullName>
    <label>Q3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>