force-app/main/default/objects/VoiceLead__c/fields/SalesRep_Name__c.field-meta.xml
<CustomField>
    <fullName>SalesRep_Name__c</fullName>
    <description>Test 1
Test 2</description>
    <label>SalesRep Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--Pick Sales Rep Name--</fullName>
                <default>true</default>
                <label>--Pick Sales Rep Name--</label>
            </value>
            <value>
                <fullName>Sam Steiger</fullName>
            </value>
            <value>
                <fullName>Keith Hastings</fullName>
            </value>
            <value>
                <fullName>Kevin Lautsbaugh</fullName>
            </value>
            <value>
                <fullName>Sean Kotora</fullName>
            </value>
            <value>
                <fullName>Sean Purtill</fullName>
            </value>
            <value>
                <fullName>Paul Buchanan</fullName>
            </value>
            <value>
                <fullName>Chris Monato</fullName>
            </value>
            <value>
                <fullName>Mina Gurguis</fullName>
            </value>
            <value>
                <fullName>Ronald Merrill</fullName>
            </value>
            <value>
                <fullName>Todd Veneman</fullName>
            </value>
            <value>
                <fullName>Cedric Lowe</fullName>
            </value>
            <value>
                <fullName>Simon Pak</fullName>
            </value>
            <value>
                <fullName>Andrew Lagomarsino</fullName>
            </value>
            <value>
                <fullName>Michael Boyer</fullName>
            </value>
            <value>
                <fullName>Harry Tatarian</fullName>
            </value>
            <value>
                <fullName>Adam Esquivel</fullName>
            </value>
            <value>
                <fullName>Shawna Harris</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>