force-app/main/default/objects/VoiceLead__c/fields/SourceID__c.field-meta.xml
<CustomField>
    <fullName>SourceID__c</fullName>
    <description>SourceID for tracking back to the originating source</description>
    <inlineHelpText>Enter the information on the Phone Display, e.g., OB 21101, PP GOOG5.</inlineHelpText>
    <label>SourceID/Phone Display</label>
    <length>30</length>
    <type>Text</type>
</CustomField>