force-app/main/default/objects/VoiceLead__c/fields/vAccount_End_Date__c.field-meta.xml
<CustomField>
    <fullName>vAccount_End_Date__c</fullName>
    <label>Account End Date</label>
    <type>DateTime</type>
</CustomField>