force-app/main/default/objects/VoiceLead__c/fields/vAccount_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>vAccount_Start_Date__c</fullName>
    <label>Account Start Date</label>
    <type>DateTime</type>
</CustomField>