force-app/main/default/objects/VoiceLead__c/fields/vAdd_on_Features__c.field-meta.xml
<CustomField>
    <fullName>vAdd_on_Features__c</fullName>
    <inlineHelpText>Other features purchased</inlineHelpText>
    <label>Add-on Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>