force-app/main/default/objects/VoiceLead__c/fields/vAnnual_Sales__c.field-meta.xml
<CustomField>
    <fullName>vAnnual_Sales__c</fullName>
    <description>Profile customer by their revenue</description>
    <inlineHelpText>Profile customer by their revenue</inlineHelpText>
    <label>Annual Sales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-$100K</fullName>
                <default>true</default>
                <label>0-$100K</label>
            </value>
            <value>
                <fullName>$100K-$250K</fullName>
            </value>
            <value>
                <fullName>$250K-$500K</fullName>
            </value>
            <value>
                <fullName>$500K-$1MM</fullName>
            </value>
            <value>
                <fullName>$1MM-$2MM</fullName>
            </value>
            <value>
                <fullName>$2MM-$10MM</fullName>
            </value>
            <value>
                <fullName>$10MM+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>