force-app/main/default/objects/VoiceLead__c/fields/vBilling_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>vBilling_Contact_Name__c</fullName>
    <label>Billing Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>