force-app/main/default/objects/VoiceLead__c/fields/vBrand__c.field-meta.xml
<CustomField>
    <fullName>vBrand__c</fullName>
    <description>Brand customer signed up for</description>
    <inlineHelpText>Brand customer signed up for</inlineHelpText>
    <label>Brand</label>
    <length>20</length>
    <type>Text</type>
</CustomField>