force-app/main/default/objects/VoiceLead__c/fields/vCity__c.field-meta.xml
<CustomField>
    <fullName>vCity__c</fullName>
    <inlineHelpText>Please enter the city part of the caller&apos;s contact address.</inlineHelpText>
    <label>City</label>
    <type>TextArea</type>
</CustomField>