force-app/main/default/objects/VoiceLead__c/fields/vCompany_Employees__c.field-meta.xml
<CustomField>
    <fullName>vCompany_Employees__c</fullName>
    <inlineHelpText>Pick the number of employees in the company</inlineHelpText>
    <label>Company Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2-4</fullName>
            </value>
            <value>
                <fullName>5-9</fullName>
            </value>
            <value>
                <fullName>10-19</fullName>
            </value>
            <value>
                <fullName>20-49</fullName>
            </value>
            <value>
                <fullName>50+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>