force-app/main/default/objects/VoiceLead__c/fields/vCompany_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>vCompany_Website_URL__c</fullName>
    <description>Company website address.</description>
    <inlineHelpText>Company website address.</inlineHelpText>
    <label>Company Website URL</label>
    <type>Url</type>
</CustomField>