force-app/main/default/objects/VoiceLead__c/fields/vCompanyName__c.field-meta.xml
<CustomField>
    <fullName>vCompanyName__c</fullName>
    <inlineHelpText>Enter Company Name here.</inlineHelpText>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>