force-app/main/default/objects/VoiceLead__c/fields/vContact_Name__c.field-meta.xml
<CustomField>
    <fullName>vContact_Name__c</fullName>
    <description>Name of Contact</description>
    <inlineHelpText>Name of Contact</inlineHelpText>
    <label>Contact Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>