force-app/main/default/objects/VoiceLead__c/fields/vContact_Phone_Admin__c.field-meta.xml
<CustomField>
    <fullName>vContact_Phone_Admin__c</fullName>
    <inlineHelpText>Admin Contact Phone. Unformatted text and Extensions can be entered.</inlineHelpText>
    <label>Contact Phone Admin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>