force-app/main/default/objects/VoiceLead__c/fields/vContact_Phone_Billing__c.field-meta.xml
<CustomField>
    <fullName>vContact_Phone_Billing__c</fullName>
    <inlineHelpText>Billing Contact Phone.  Unformatted and you can put in extensions as needed.</inlineHelpText>
    <label>Contact Phone Billing</label>
    <length>30</length>
    <type>Text</type>
</CustomField>