force-app/main/default/objects/VoiceLead__c/fields/vContact_Title__c.field-meta.xml
<CustomField>
    <fullName>vContact_Title__c</fullName>
    <description>Main Contact&apos;s Title</description>
    <inlineHelpText>Main Contact&apos;s Title</inlineHelpText>
    <label>Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>