force-app/main/default/objects/VoiceLead__c/fields/vCS_Contact_Frequency__c.field-meta.xml
<CustomField>
    <fullName>vCS_Contact_Frequency__c</fullName>
    <description>Count and some details of CS Contacts</description>
    <inlineHelpText>Count and some details of CS Contacts</inlineHelpText>
    <label>CS Contact Frequency</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>