force-app/main/default/objects/VoiceLead__c/fields/vCustomer_ID__c.field-meta.xml
<CustomField>
    <fullName>vCustomer_ID__c</fullName>
    <description>This is the Account ID, which is Company Key for Onebox and eVoice, or ClientID for PhonePeople</description>
    <inlineHelpText>The Account ID, which is Company Key for Onebox and eVoice, or ClientID for PhonePeople</inlineHelpText>
    <label>Customer ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>