force-app/main/default/objects/VoiceLead__c/fields/vemail__c.field-meta.xml
<CustomField>
    <fullName>vemail__c</fullName>
    <description>Caller&apos;s email address</description>
    <inlineHelpText>Please ask for and enter the caller&apos;s email address.</inlineHelpText>
    <label>email</label>
    <type>Email</type>
</CustomField>