force-app/main/default/objects/VoiceLead__c/fields/vFirst_Name__c.field-meta.xml
<CustomField>
    <fullName>vFirst_Name__c</fullName>
    <description>Caller&apos;s first name</description>
    <inlineHelpText>Please enter the Caller&apos;s first name.</inlineHelpText>
    <label>First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>