force-app/main/default/objects/VoiceLead__c/fields/vKind_of_Business__c.field-meta.xml
<CustomField>
    <fullName>vKind_of_Business__c</fullName>
    <description>Select the primary kind of business</description>
    <inlineHelpText>Select the primary kind of business</inlineHelpText>
    <label>Kind of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1  Accounting</fullName>
            </value>
            <value>
                <fullName>2  Advertising</fullName>
            </value>
            <value>
                <fullName>3  Aerospace/Aviation/Automotive</fullName>
            </value>
            <value>
                <fullName>4  Agriculture/Forestry/Fishing</fullName>
            </value>
            <value>
                <fullName>5  Biotech</fullName>
            </value>
            <value>
                <fullName>6  Business Services - Hotels/Other Lodging Places</fullName>
            </value>
            <value>
                <fullName>7  Computer Hardware/Software/Internet</fullName>
            </value>
            <value>
                <fullName>8  Construction/Home improvement</fullName>
            </value>
            <value>
                <fullName>9  Consulting</fullName>
            </value>
            <value>
                <fullName>10 Education</fullName>
            </value>
            <value>
                <fullName>11 Engineering/Architecture</fullName>
            </value>
            <value>
                <fullName>12 Entertainment/Recreation</fullName>
            </value>
            <value>
                <fullName>13 Finance/Banking/Insurance/Mortgage</fullName>
            </value>
            <value>
                <fullName>14 Food services</fullName>
            </value>
            <value>
                <fullName>15 Government/Military</fullName>
            </value>
            <value>
                <fullName>16 HealthCare/Medical</fullName>
            </value>
            <value>
                <fullName>17 Internet (ASP)</fullName>
            </value>
            <value>
                <fullName>18 Legal</fullName>
            </value>
            <value>
                <fullName>19 Manufacturing</fullName>
            </value>
            <value>
                <fullName>20 Market Research/Marketing/PR</fullName>
            </value>
            <value>
                <fullName>21 Media/Printing/Publishing</fullName>
            </value>
            <value>
                <fullName>22 Mining</fullName>
            </value>
            <value>
                <fullName>23 Non-Profit</fullName>
            </value>
            <value>
                <fullName>24 Pharmaceutical/Chemical</fullName>
            </value>
            <value>
                <fullName>25 Research/Science</fullName>
            </value>
            <value>
                <fullName>26 Real Estate</fullName>
            </value>
            <value>
                <fullName>27 Retail/Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>28 Telecommunications</fullName>
            </value>
            <value>
                <fullName>29 Utilities</fullName>
            </value>
            <value>
                <fullName>30 Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>