force-app/main/default/objects/VoiceLead__c/fields/vLast_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>vLast_Payment_Date__c</fullName>
    <description>Last Date a Payment was received</description>
    <inlineHelpText>Last Date a Payment was received</inlineHelpText>
    <label>Last Payment Date</label>
    <type>DateTime</type>
</CustomField>