force-app/main/default/objects/VoiceLead__c/fields/vLTV__c.field-meta.xml
<CustomField>
    <fullName>vLTV__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Collected from Customer to date of import</description>
    <inlineHelpText>$ Collected from Customer from signup to import date</inlineHelpText>
    <label>LTV</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>