force-app/main/default/objects/VoiceLead__c/fields/vNumber_of_Extensions__c.field-meta.xml
<CustomField>
    <fullName>vNumber_of_Extensions__c</fullName>
    <inlineHelpText>DIDs, Extensions, set up</inlineHelpText>
    <label>Number of Extensions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>