force-app/main/default/objects/VoiceLead__c/fields/vNumber_of_Local_Numbers__c.field-meta.xml
<CustomField>
    <fullName>vNumber_of_Local_Numbers__c</fullName>
    <inlineHelpText>Number of Onebox Local Numbers selected by cust</inlineHelpText>
    <label>Number of Local Numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>