force-app/main/default/objects/VoiceLead__c/fields/vNumber_of_TF_numbers__c.field-meta.xml
<CustomField>
    <fullName>vNumber_of_TF_numbers__c</fullName>
    <inlineHelpText>Number of toll free numbers with us.</inlineHelpText>
    <label>Number of TF numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>