force-app/main/default/objects/VoiceLead__c/fields/vProducts_Purchased__c.field-meta.xml
<CustomField>
    <fullName>vProducts_Purchased__c</fullName>
    <description>All different products purchased historically.</description>
    <inlineHelpText>All different products purchased historically.</inlineHelpText>
    <label>Products Purchased</label>
    <type>TextArea</type>
</CustomField>