force-app/main/default/objects/VoiceLead__c/fields/vQ1_Usage_Minutes__c.field-meta.xml
<CustomField>
    <fullName>vQ1_Usage_Minutes__c</fullName>
    <inlineHelpText>Number of Minutes Used in Q1</inlineHelpText>
    <label>Q1 Usage Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>