force-app/main/default/objects/VoiceLead__c/fields/vQ2_Usage_Minutes__c.field-meta.xml
<CustomField>
    <fullName>vQ2_Usage_Minutes__c</fullName>
    <inlineHelpText>Number of Minutes Used in Q2</inlineHelpText>
    <label>Q2 Usage Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>