force-app/main/default/objects/VoiceLead__c/fields/vQ3_Usage_Minutes__c.field-meta.xml
<CustomField>
    <fullName>vQ3_Usage_Minutes__c</fullName>
    <inlineHelpText>Number of Minutes Used in Q3</inlineHelpText>
    <label>Q3 Usage Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>