force-app/main/default/objects/VoiceLead__c/fields/vResearch_Notes__c.field-meta.xml
<CustomField>
    <fullName>vResearch_Notes__c</fullName>
    <description>For BM to enter research notes</description>
    <inlineHelpText>For BM to enter research notes</inlineHelpText>
    <label>Research Notes</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>