force-app/main/default/objects/VoiceLead__c/fields/vSource_ID__c.field-meta.xml
<CustomField>
    <fullName>vSource_ID__c</fullName>
    <inlineHelpText>ID for Source of signup</inlineHelpText>
    <label>Source ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>