force-app/main/default/objects/VoiceLead__c/fields/vSource_ID_Description__c.field-meta.xml
<CustomField>
    <fullName>vSource_ID_Description__c</fullName>
    <inlineHelpText>Description of Source of Signup</inlineHelpText>
    <label>Source ID Description</label>
    <type>TextArea</type>
</CustomField>