force-app/main/default/objects/VoiceLead__c/fields/vState__c.field-meta.xml
<CustomField>
    <fullName>vState__c</fullName>
    <inlineHelpText>Please enter the State or Province for the caller&apos;s contact address.</inlineHelpText>
    <label>State/Province</label>
    <length>10</length>
    <type>Text</type>
</CustomField>