force-app/main/default/objects/VoiceLead__c/fields/vStreet__c.field-meta.xml
<CustomField>
    <fullName>vStreet__c</fullName>
    <description>Street address</description>
    <inlineHelpText>Please enter the postal street address and unit# number.</inlineHelpText>
    <label>Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>