force-app/main/default/objects/VoiceLead__c/fields/vStreetLine2__c.field-meta.xml
<CustomField>
    <fullName>vStreetLine2__c</fullName>
    <description>Additional Line for Street Address</description>
    <inlineHelpText>Additional Line for Street Address</inlineHelpText>
    <label>StreetLine2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>