force-app/main/default/objects/VoiceLead__c/fields/vTenure_in_Months__c.field-meta.xml
<CustomField>
    <fullName>vTenure_in_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of months as a customer</description>
    <inlineHelpText>Number of months as a customer</inlineHelpText>
    <label>Tenure in Months</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>