force-app/main/default/objects/VoiceLead__c/fields/vYTD_Collections__c.field-meta.xml
<CustomField>
    <fullName>vYTD_Collections__c</fullName>
    <description>Amount spent with j2 this year.</description>
    <inlineHelpText>Amount spent with j2 this year.</inlineHelpText>
    <label>YTD Collections</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>