force-app/main/default/objects/VoiceLead__c/fields/vZip__c.field-meta.xml
<CustomField>
    <fullName>vZip__c</fullName>
    <inlineHelpText>Please enter the Zip or Postal Code for the caller&apos;s contact address.</inlineHelpText>
    <label>Zip/Postal Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>